# testt

./: .gitignore
back/: main.py  pyproject.toml
back/rag/: llm_generator.py
back/rag/ingestion/: document_loader.py  embeddings.py  vector_store.py
back/rag/retrieval/: retriever.py
back/src/: relatorio_geral_hortifruti.csv
back/test/: test.ipynb
front/hortfruti/: README.md  package-lock.json  package.json
front/hortfruti/src/: App.vue
front/hortfruti/src/components/: ChatBox.vue  ChatIcon.vue  TheHeader.vue  ThePanel.vue
