[project]
name = "rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.8",
    "langchain-text-splitters>=0.3.6",
    "langchain[groq]>=0.3.20",
    "langgraph>=0.3.5",
]
